# idea-binders

./: LICENSE  README.md  pyproject.toml  requirements.in  requirements.txt
amat-ws2020/: Start.ipynb
stat-ws2020/: Start.ipynb
