[tool.poetry]
name = "idea-binders"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sympy = "^1.6.2"
matplotlib = "^3.3.2"
seaborn = "^0.11.0"
altair = "^4.1.0"
pandas = "^1.1.3"
numpy = "^1.19.2"

[tool.poetry.dev-dependencies]
jupyterlab = "^2.2.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
